// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Pages/About Us/About Us Banner Component 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
    <div
      className="css-1637b1s"
    >
      <div
        className="css-f8qm9p"
        data-test="banner-title"
      >
        We believe in everyone's power to do good
      </div>
      <div>
         
      </div>
      <div>
        <button
          className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root  css-sghohy-MuiButtonBase-root-MuiButton-root"
          data-test="add-ecosia-button"
          disabled={false}
          onBlur={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          Add Ecosia to Firefox
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/About Us/About Us Hire Component 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
    <div
      className="css-14wcu1j"
    >
      <div
        className="css-f8qm9p"
      >
        We're hiring!
      </div>
      <div
        className="css-18ogej"
      >
        Want to help change the world? Let's team up. 
        <br />
        Apply to help us build great products and services that can make the world a more sustainable place. 
        <br />
        We can't wait to hear from you.
      </div>
      <div>
        <button
          className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root  css-sghohy-MuiButtonBase-root-MuiButton-root"
          disabled={false}
          onBlur={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          See openings
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/About Us/About Us Meet The Team Component 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
    <div
      className="css-14wcu1j"
    >
      <div
        className="css-f8qm9p"
      >
        Step inside!
      </div>
      <div
        className="css-18ogej"
      >
        Meet the humans who make Ecosia and learn what it's like to work here.
      </div>
      <div>
        <button
          className="MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root  css-ke5b6m-MuiButtonBase-root-MuiButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          Play
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/About Us/About Us Social Business Component 1`] = `
<div
  className="css-1oskuwq"
>
  <div
    className="css-f8qm9p"
  >
    Ecosia is a social business founded in 2009 after a trip around the world
  </div>
  <div
    className="css-ef7oun"
  >
    <div>
      <div
        className="css-1wjqaby"
      >
        December 2009
      </div>
      <div
        className="css-1yltisf"
      >
        Ecosia is born
      </div>
      <div
        className="css-13vo6hn"
      />
      <div
        className="css-1yltisf"
      >
        Christian founded Ecosia.org after a trip around the world helped him understand the problems of deforestation.
      </div>
    </div>
    <div>
      <div
        className="css-1wjqaby"
      >
        2009 - 2011
      </div>
      <div
        className="css-1yltisf"
      >
        People's choice
      </div>
      <div
        className="css-13vo6hn"
      />
      <div
        className="css-1yltisf"
      >
        Ecosia won several awards for its clever concept and speedy growth in Europe and beyond.
      </div>
    </div>
    <div>
      <div
        className="css-1wjqaby"
      >
        April 2014
      </div>
      <div
        className="css-1yltisf"
      >
        First German B Corp
      </div>
      <div
        className="css-13vo6hn"
      />
      <div
        className="css-1yltisf"
      >
        Ecosia was the first German company to become a B Corporation thanks to its social business model.
      </div>
    </div>
    <div>
      <div
        className="css-1wjqaby"
      >
        April 2018
      </div>
      <div
        className="css-1yltisf"
      >
        25 million trees
      </div>
      <div
        className="css-13vo6hn"
      />
      <div
        className="css-1yltisf"
      >
        A planting milestone! That same year, Ecosia also builds its own solar energy plant to power every search.
      </div>
    </div>
  </div>
  <div>
     
  </div>
</div>
`;

exports[`Storyshots Pages/Home/Home Countries Component 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
    <div
      className="css-1vzsge8"
      data-test="countries-title"
    >
      Where are your trees being planted?
    </div>
    <div
      className="css-18kvaxm"
      data-test="countries-subtitle"
    >
      We plant in 30+ countries with local organizations
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-4 css-cabf5l-MuiGrid-root"
  >
    <img
      alt="brazil"
      src="brazil.webp"
    />
    <div
      className="css-qtux6g"
    >
      Brazil
    </div>
    <div
      className="css-jvn60k"
    >
      Your trees in Brazil protect thousands of endangered plants and animals.
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-4 css-cabf5l-MuiGrid-root"
  >
    <img
      alt="burkina faso"
      src="burkinafaso.webp"
    />
    <div
      className="css-qtux6g"
    >
      Burkina Faso
    </div>
    <div
      className="css-jvn60k"
    >
      By planting trees in Burkina Faso, you restore desertified land to its former fertility.
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-4 css-cabf5l-MuiGrid-root"
  >
    <img
      alt="indonesia"
      src="indonesia.webp"
    />
    <div
      className="css-qtux6g"
    >
      Indonesia
    </div>
    <div
      className="css-jvn60k"
    >
      In Indonesia, your searches bring back forests on former palm oil plantations while creating alternative sources of income.
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
  >
     
  </div>
</div>
`;

exports[`Storyshots Pages/Home/Home Join Us Component 1`] = `
<div
  className="css-z7gzyp"
>
  <div
    className="css-18kvaxm"
    data-test="join-us-title"
  >
    Join 15 million people who already use Ecosia
  </div>
  <div>
     
  </div>
  <div>
    <button
      className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root  css-sghohy-MuiButtonBase-root-MuiButton-root"
      data-test="share-ecosia"
      disabled={false}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      Share Ecosia
    </button>
  </div>
</div>
`;

exports[`Storyshots Pages/Home/Home Map Component 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
    <div
      className="css-1vzsge8"
      data-test="map-title"
    >
      Trees planted by ecosia users
    </div>
    <div
      className="css-19a4w9z"
    >
      0
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-3 css-8t9m1b-MuiGrid-root"
  >
    <div
      className="css-35yx43"
    >
      15 Million
    </div>
    <div
      className="css-1izv9hv"
    >
      People using Ecosia
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-3 css-8t9m1b-MuiGrid-root"
  >
    <div
      className="css-35yx43"
    >
      500+
    </div>
    <div
      className="css-1izv9hv"
    >
      Native species
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-3 css-8t9m1b-MuiGrid-root"
  >
    <div
      className="css-35yx43"
    >
      30+
    </div>
    <div
      className="css-1izv9hv"
    >
      Countries
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-3 css-8t9m1b-MuiGrid-root"
  >
    <div
      className="css-35yx43"
    >
      60+
    </div>
    <div
      className="css-1izv9hv"
    >
      Active projects
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
    <div
      className="css-xdz7o8"
    >
      <a
        data-test="discover-projects"
        href="/"
        onClick={[Function]}
      >
        Discover our projects 
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
          data-testid="ChevronRightIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
      </a>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
     
  </div>
</div>
`;

exports[`Storyshots Pages/Home/Home Search Component 1`] = `
<div
  className="css-16lt42u"
>
  <div>
    <img
      alt="logo"
      className="css-w41mks"
      src="logo.png"
    />
  </div>
  <div>
    <div
      className="MuiFormControl-root css-obb7oc-MuiFormControl-root"
    >
      <div
        className="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-o9k5xi-MuiInputBase-root-MuiOutlinedInput-root"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          className="MuiOutlinedInput-input MuiInputBase-input MuiInputBase-inputAdornedEnd css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
          data-test="searchInput"
          disabled={false}
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="Search the web to plant trees..."
          required={false}
          type="text"
          value=""
        />
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="SearchIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
          />
        </svg>
        <fieldset
          aria-hidden={true}
          className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
        >
          <legend
            className="css-hdw1oc"
          >
            <span
              className="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
  <div>
    <h1>
      The search engine that plants trees.
    </h1>
  </div>
  <div
    className="css-15j0tga"
  >
    100
  </div>
  <div>
    Trees planted by Ecosia users.
  </div>
</div>
`;

exports[`Storyshots Pages/Home/Home Why Choose Us Component 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
    <div
      className="css-1vzsge8"
    >
      Why choose Ecosia?
    </div>
    <div
      className="css-18kvaxm"
    >
      We put people and planet before profit
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-1 css-es5pz-MuiGrid-root"
  >
    <img
      alt="profits"
      src="profits.svg"
    />
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-5 css-18xjutb-MuiGrid-root"
  >
    <div
      className="css-6rs2w6"
    >
      <div
        className="css-385s9b"
      >
        We’re a not-for-profit business
      </div>
      <div>
        We dedicate 100% of our profits to climate action, with at least 80% financing tree-planting projects.
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-1 css-es5pz-MuiGrid-root"
  >
    <img
      alt="privacy"
      src="privacy.svg"
    />
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-5 css-18xjutb-MuiGrid-root"
  >
    <div
      className="css-6rs2w6"
    >
      <div
        className="css-385s9b"
      >
        Ecosia is powered by 200% renewable energy
      </div>
      <div>
        Our solar panels produce twice the amount of energy needed to power all searches with renewables.
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-1 css-es5pz-MuiGrid-root"
  >
    <img
      alt="world"
      src="world.svg"
    />
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-5 css-18xjutb-MuiGrid-root"
  >
    <div
      className="css-6rs2w6"
    >
      <div
        className="css-385s9b"
      >
        We always put your privacy first
      </div>
      <div>
        We anonymize your searches and don’t create a profile of you. We’re interested in trees, not your data.
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-1 css-es5pz-MuiGrid-root"
  >
    <img
      alt="coin"
      src="coin.svg"
    />
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-5 css-18xjutb-MuiGrid-root"
  >
    <div
      className="css-6rs2w6"
    >
      <div
        className="css-385s9b"
      >
        We are transparent about everything we do
      </div>
      <div>
        We publish detailed financial reports and frequent updates from our tree planting projects.
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
    <div
      className="css-xdz7o8"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Other reasons 
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
          data-testid="ChevronRightIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
      </a>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
     
  </div>
</div>
`;

exports[`Storyshots Pages/How It Works/How It Works Brands Component 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
    <div
      className="css-l7puij"
    >
      <img
        alt="tdlr"
        className="css-1o2ogah"
        src="up-worthy.svg"
      />
      <img
        alt="tdlr"
        className="css-1o2ogah"
        src="scientific.svg"
      />
      <img
        alt="tdlr"
        className="css-1o2ogah"
        src="guardian.svg"
      />
      <img
        alt="tdlr"
        className="css-1o2ogah"
        src="salon.svg"
      />
      <img
        alt="tdlr"
        className="css-1o2ogah"
        src="forbes.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/How It Works/How It Works Graphics Component 1`] = `
<div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
    >
      <div
        className="css-1xeryup"
      >
        Over 146 million trees planted
      </div>
      <div
        className="css-q40ub6"
      >
        <div>
          <div
            className="css-1wjqaby"
          >
            December 2009
          </div>
          <div
            className="css-1yltisf"
          >
            1.1 sec
          </div>
          <div
            className="css-qqlgcp"
          />
          <div
            className="css-1wjqaby"
          >
            to plant a tree
          </div>
        </div>
        <div>
          <div
            className="css-1wjqaby"
          >
            over
          </div>
          <div
            className="css-1yltisf"
          >
            15 million
          </div>
          <div
            className="css-qqlgcp"
          />
          <div
            className="css-1wjqaby"
          >
            active users
          </div>
        </div>
        <div>
          <div
            className="css-1wjqaby"
          >
            over
          </div>
          <div
            className="css-1yltisf"
          >
            12,101,152
          </div>
          <div
            className="css-qqlgcp"
          />
          <div
            className="css-1wjqaby"
          >
            EUR invested
          </div>
        </div>
        <div>
          <div
            className="css-1wjqaby"
          >
            over
          </div>
          <div
            className="css-1yltisf"
          >
            9000
          </div>
          <div
            className="css-qqlgcp"
          />
          <div
            className="css-1wjqaby"
          >
            planting sites
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/How It Works/How It Works How It Works Component 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
    <div
      className="css-kl3k6o"
    >
      <div
        className="css-j4shcj"
      >
        How it works
      </div>
      <div
        className="css-y8pvf0"
      >
        <div
          className="css-1yltisf"
        >
          <img
            alt="tdlr"
            className="css-184rirz"
            src="ads.svg"
          />
          <div
            className="css-gz8dae"
          >
            Search ads generate income for Ecosia.
          </div>
        </div>
        <div
          className="css-1yltisf"
        >
          <img
            alt="tdlr"
            className="css-184rirz"
            src="ecosia.svg"
          />
          <div
            className="css-gz8dae"
          >
            You search the web with Ecosia.
          </div>
        </div>
        <div
          className="css-1yltisf"
        >
          <img
            alt="tdlr"
            className="css-184rirz"
            src="income.svg"
          />
          <div
            className="css-gz8dae"
          >
            Ecosia uses this income to plant trees.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/How It Works/How It Works How It Works Page Index 1`] = `
<div
  className="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xl-4 css-9u4dd7-MuiGrid-root"
  >
     
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-4 css-14oylhm-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
      >
        <div
          className="css-4skt07"
        >
          <div
            className="css-j4shcj"
          >
            Plant trees while you search the web
          </div>
          <div
            className="css-csqwk5"
          />
          <div>
            We use the profit we make from your searches to plant trees where they are needed most. 
          </div>
          <div>
            Get the free browser extension and plant trees with every search.
          </div>
          <div
            className="css-csqwk5"
          />
          <div>
            <button
              className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root  css-sghohy-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              Add Ecosia to Firefox
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xl-4 css-9u4dd7-MuiGrid-root"
  >
     
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
      >
        <div
          className="css-l7puij"
        >
          <img
            alt="tdlr"
            className="css-1o2ogah"
            src="up-worthy.svg"
          />
          <img
            alt="tdlr"
            className="css-1o2ogah"
            src="scientific.svg"
          />
          <img
            alt="tdlr"
            className="css-1o2ogah"
            src="guardian.svg"
          />
          <img
            alt="tdlr"
            className="css-1o2ogah"
            src="salon.svg"
          />
          <img
            alt="tdlr"
            className="css-1o2ogah"
            src="forbes.svg"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xl-4 css-18h6fts-MuiGrid-root"
  >
     
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-4 css-cabf5l-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
      >
        <div
          className="css-kl3k6o"
        >
          <div
            className="css-j4shcj"
          >
            How it works
          </div>
          <div
            className="css-y8pvf0"
          >
            <div
              className="css-1yltisf"
            >
              <img
                alt="tdlr"
                className="css-184rirz"
                src="ads.svg"
              />
              <div
                className="css-gz8dae"
              >
                Search ads generate income for Ecosia.
              </div>
            </div>
            <div
              className="css-1yltisf"
            >
              <img
                alt="tdlr"
                className="css-184rirz"
                src="ecosia.svg"
              />
              <div
                className="css-gz8dae"
              >
                You search the web with Ecosia.
              </div>
            </div>
            <div
              className="css-1yltisf"
            >
              <img
                alt="tdlr"
                className="css-184rirz"
                src="income.svg"
              />
              <div
                className="css-gz8dae"
              >
                Ecosia uses this income to plant trees.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xl-4 css-18h6fts-MuiGrid-root"
  >
     
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xl-4 css-9u4dd7-MuiGrid-root"
  >
     
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-4 css-14oylhm-MuiGrid-root"
  >
    <div>
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
      >
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
        >
          <div
            className="css-1xeryup"
          >
            Over 146 million trees planted
          </div>
          <div
            className="css-q40ub6"
          >
            <div>
              <div
                className="css-1wjqaby"
              >
                December 2009
              </div>
              <div
                className="css-1yltisf"
              >
                1.1 sec
              </div>
              <div
                className="css-qqlgcp"
              />
              <div
                className="css-1wjqaby"
              >
                to plant a tree
              </div>
            </div>
            <div>
              <div
                className="css-1wjqaby"
              >
                over
              </div>
              <div
                className="css-1yltisf"
              >
                15 million
              </div>
              <div
                className="css-qqlgcp"
              />
              <div
                className="css-1wjqaby"
              >
                active users
              </div>
            </div>
            <div>
              <div
                className="css-1wjqaby"
              >
                over
              </div>
              <div
                className="css-1yltisf"
              >
                12,101,152
              </div>
              <div
                className="css-qqlgcp"
              />
              <div
                className="css-1wjqaby"
              >
                EUR invested
              </div>
            </div>
            <div>
              <div
                className="css-1wjqaby"
              >
                over
              </div>
              <div
                className="css-1yltisf"
              >
                9000
              </div>
              <div
                className="css-qqlgcp"
              />
              <div
                className="css-1wjqaby"
              >
                planting sites
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xl-4 css-9u4dd7-MuiGrid-root"
  >
     
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xl-4 css-18h6fts-MuiGrid-root"
  >
     
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-4 css-cabf5l-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
      >
        <div
          className="css-iq2mru"
        >
          <div>
            <img
              alt="transparency"
              src="https://infopages-prod-cdn.ecosia.org/assets/images/what/transperancy-blue-img-8408403664.svg"
            />
          </div>
          <div
            className="css-j4shcj"
          >
            We know trust has to be earned
          </div>
          <div
            className="css-ds9a2i"
          >
            That is why we publish our monthly financial reports and tree planting receipts. 
            <br />
             This way you can hold us accountable as we follow our journey to a reforested world.
          </div>
          <div>
            <button
              className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root  css-sghohy-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              View Reports
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xl-4 css-18h6fts-MuiGrid-root"
  >
     
  </div>
</div>
`;

exports[`Storyshots Pages/How It Works/How It Works Plant Trees Component 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
    <div
      className="css-4skt07"
    >
      <div
        className="css-j4shcj"
      >
        Plant trees while you search the web
      </div>
      <div
        className="css-csqwk5"
      />
      <div>
        We use the profit we make from your searches to plant trees where they are needed most. 
      </div>
      <div>
        Get the free browser extension and plant trees with every search.
      </div>
      <div
        className="css-csqwk5"
      />
      <div>
        <button
          className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root  css-sghohy-MuiButtonBase-root-MuiButton-root"
          disabled={false}
          onBlur={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          Add Ecosia to Firefox
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/How It Works/How It Works Reports Component 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
    <div
      className="css-iq2mru"
    >
      <div>
        <img
          alt="transparency"
          src="https://infopages-prod-cdn.ecosia.org/assets/images/what/transperancy-blue-img-8408403664.svg"
        />
      </div>
      <div
        className="css-j4shcj"
      >
        We know trust has to be earned
      </div>
      <div
        className="css-ds9a2i"
      >
        That is why we publish our monthly financial reports and tree planting receipts. 
        <br />
         This way you can hold us accountable as we follow our journey to a reforested world.
      </div>
      <div>
        <button
          className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root  css-sghohy-MuiButtonBase-root-MuiButton-root"
          disabled={false}
          onBlur={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          View Reports
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/Mobile/Mobile Banner Component 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
    <div
      className="css-19bnsdb"
    >
      <div
        className="css-1vzsge8"
      >
        Ecosia for Mobile
      </div>
      <div
        className="css-1r2ozgb"
      >
        Plant trees while searching the web 
        <br />
         with your mobile phone or tablet.
      </div>
      <div>
        <img
          alt="app store"
          src="app-store-en.svg"
        />
        <img
          alt="play store"
          src="play-store-en.svg"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/Mobile/Mobile Mobile Page 1`] = `
<section>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
    >
      <div
        className="css-19bnsdb"
      >
        <div
          className="css-1vzsge8"
        >
          Ecosia for Mobile
        </div>
        <div
          className="css-1r2ozgb"
        >
          Plant trees while searching the web 
          <br />
           with your mobile phone or tablet.
        </div>
        <div>
          <img
            alt="app store"
            src="app-store-en.svg"
          />
          <img
            alt="play store"
            src="play-store-en.svg"
          />
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots Pages/Privacy/Privacy Privacy Page 1`] = `
<section>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
    >
      <div
        className="css-19bnsdb"
      >
        <div
          className="css-1vzsge8"
        >
          We protect your privacy
        </div>
        <div
          className="css-1r2ozgb"
        >
          Forests need protecting and so does your privacy. 
          <br />
          We make sure to do both.
        </div>
        <div>
          <a
            href="#statements"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-tzssek-MuiSvgIcon-root"
              data-testid="ArrowDropDownCircleIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 12-4-4h8l-4 4z"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
    >
      <div
        className="css-1hm8jik"
        id="statements"
      >
        <div
          className="css-2dwquo"
        >
          <div>
            <img
              alt="tldr"
              src="panther.svg"
            />
          </div>
          <div>
            <div
              className="css-176ko48"
            >
              We don’t store your searches permanently
            </div>
            <div>
              We don’t create personal profiles of you based on your search history. We actually anonymize all searches within one week.
            </div>
          </div>
        </div>
        <div
          className="css-2dwquo"
        >
          <div>
            <img
              alt="tldr"
              src="trees.svg"
            />
          </div>
          <div>
            <div
              className="css-176ko48"
            >
              We don’t sell your data to advertisers
            </div>
            <div>
              Many web services collect user data in order to sell it without asking your permission. We don’t sell your data or your searches to advertising companies.
            </div>
          </div>
        </div>
        <div
          className="css-2dwquo"
        >
          <div>
            <img
              alt="tldr"
              src="crow.svg"
            />
          </div>
          <div>
            <div
              className="css-176ko48"
            >
              Your searches are encrypted
            </div>
            <div>
              We protect your searches from potential eavesdroppers with a securely encrypted connection. This way we make sure that nobody between you and us can see your searches.
            </div>
          </div>
        </div>
        <div
          className="css-2dwquo"
        >
          <div>
            <img
              alt="tldr"
              src="fish.svg"
            />
          </div>
          <div>
            <div
              className="css-176ko48"
            >
              We don’t use external tracking tools
            </div>
            <div>
              Most websites use external tracking tools, like Google Analytics, to optimize their services. We don’t use such third party trackers, in order to prevent others from accessing your searches.
            </div>
          </div>
        </div>
        <div
          className="css-2dwquo"
        >
          <div>
            <img
              alt="tldr"
              src="fox.svg"
            />
          </div>
          <div>
            <div
              className="css-176ko48"
            >
              You can turn off all our tracking
            </div>
            <div>
              We only collect a small amount of data to be able to improve our services. If you want to opt out of tracking, you can activate “Do Not Track” in your browser’s settings.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots Pages/Privacy/Privacy Protect Privacy Component 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
    <div
      className="css-19bnsdb"
    >
      <div
        className="css-1vzsge8"
      >
        We protect your privacy
      </div>
      <div
        className="css-1r2ozgb"
      >
        Forests need protecting and so does your privacy. 
        <br />
        We make sure to do both.
      </div>
      <div>
        <a
          href="#statements"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-tzssek-MuiSvgIcon-root"
            data-testid="ArrowDropDownCircleIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 12-4-4h8l-4 4z"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
    <div
      className="css-1hm8jik"
      id="statements"
    >
      <div
        className="css-2dwquo"
      >
        <div>
          <img
            alt="tldr"
            src="panther.svg"
          />
        </div>
        <div>
          <div
            className="css-176ko48"
          >
            We don’t store your searches permanently
          </div>
          <div>
            We don’t create personal profiles of you based on your search history. We actually anonymize all searches within one week.
          </div>
        </div>
      </div>
      <div
        className="css-2dwquo"
      >
        <div>
          <img
            alt="tldr"
            src="trees.svg"
          />
        </div>
        <div>
          <div
            className="css-176ko48"
          >
            We don’t sell your data to advertisers
          </div>
          <div>
            Many web services collect user data in order to sell it without asking your permission. We don’t sell your data or your searches to advertising companies.
          </div>
        </div>
      </div>
      <div
        className="css-2dwquo"
      >
        <div>
          <img
            alt="tldr"
            src="crow.svg"
          />
        </div>
        <div>
          <div
            className="css-176ko48"
          >
            Your searches are encrypted
          </div>
          <div>
            We protect your searches from potential eavesdroppers with a securely encrypted connection. This way we make sure that nobody between you and us can see your searches.
          </div>
        </div>
      </div>
      <div
        className="css-2dwquo"
      >
        <div>
          <img
            alt="tldr"
            src="fish.svg"
          />
        </div>
        <div>
          <div
            className="css-176ko48"
          >
            We don’t use external tracking tools
          </div>
          <div>
            Most websites use external tracking tools, like Google Analytics, to optimize their services. We don’t use such third party trackers, in order to prevent others from accessing your searches.
          </div>
        </div>
      </div>
      <div
        className="css-2dwquo"
      >
        <div>
          <img
            alt="tldr"
            src="fox.svg"
          />
        </div>
        <div>
          <div
            className="css-176ko48"
          >
            You can turn off all our tracking
          </div>
          <div>
            We only collect a small amount of data to be able to improve our services. If you want to opt out of tracking, you can activate “Do Not Track” in your browser’s settings.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components/Components Ecosia Footer 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
    <div
      className="css-1c7kp7y"
    />
    <div
      className="css-1yse6at"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="FacebookRoundedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="PublicRoundedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 17.93c-3.95-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L9 15v1c0 1.1.9 2 2 2v1.93zm6.9-2.54c-.26-.81-1-1.39-1.9-1.39h-1v-3c0-.55-.45-1-1-1H8v-2h2c.55 0 1-.45 1-1V7h2c1.1 0 2-.9 2-2v-.41c2.93 1.19 5 4.06 5 7.41 0 2.08-.8 3.97-2.1 5.39z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="EmojiPeopleRoundedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <circle
          cx="12"
          cy="4"
          r="2"
        />
        <path
          d="M15.89 8.11C15.5 7.72 14.83 7 13.53 7h-2.54c-2.46-.01-4.51-1.8-4.92-4.15-.08-.49-.49-.85-.98-.85-.61 0-1.09.54-1 1.14C4.53 5.8 6.47 7.95 9 8.71V21c0 .55.45 1 1 1s1-.45 1-1v-5h2v5c0 .55.45 1 1 1s1-.45 1-1V10.05l3.24 3.24c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41l-3.76-3.77z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="PianoRoundedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-5 11.5h.25V19h-4.5v-4.5H10c.55 0 1-.45 1-1V5h2v8.5c0 .55.45 1 1 1zM5 5h2v8.5c0 .55.45 1 1 1h.25V19H5V5zm14 14h-3.25v-4.5H16c.55 0 1-.45 1-1V5h2v14z"
        />
      </svg>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
    <div
      className="css-1mtzvui"
    >
      Ecosia GmbH does not assume responsibility for the content of sites to which it links and the way in which search results are displayed. To learn more please read our privacy policy and our terms of service.
    </div>
  </div>
</div>
`;
